CSS/style.css
:root {
  /* colors */
  --cc-color-dark: #231f40;
  --cc-color: #303030;
  --cc-grey: #4f5969;
  --cc-grey-light: #808ea4;
  --cc-grey-lighter: #eaebf8;
  --cc-white-off: #fef6f3;
  --cc-white-sugar: #f5f5f5;
  --cc-white: #ffffff;
  --cc-primary: #525fe1;
  --cc-primary-bg: #525fe1;
  --cc-primary-light: #8289d8;
  --cc-bg-dark: #231f40;
  --cc-bg-primary-lighter: #e5e1f2;
  --cc-bg-distinct-lighter: #fae1cd;
  --cc-distinct-dark: #f86f03;
  --cc-distinct: #ffa04d;
  --cc-distinct-light: #fde2d1;
  --cc-heart-color: #eb5555;
  /* fonts */
  --cc-body-font-weight: 600;
  --cc-navbar-brand-font-size-small: 14px;
}

/*
  Make box-sizing flexible
*/
*,
*::before,
*::after {
  box-sizing: inherit;
}
/*
  Remove default margin -- set line-height
*/
* {
  margin: 0;
  padding: 0;
  line-height: calc(1em + 0.5rem);
}
/*
  Allow percentage-based heights in the application-- set box-sizing
*/
html,
body {
  height: 100%;
  box-sizing: border-box;
  font-family: montserrat, sans-serif;
  scroll-behavior: smooth;
  color: var(--cc-color);
  overflow: hidden;
}
/*
  Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
  Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}
/*
  Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
  hyphens: auto;
}

a {
  color: var(--cc-primary);
  text-decoration: none;
  display: inline-block;
  position: relative;
  padding: 0.05em 0;
}

a::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0.1em;
  background-color: var(--cc-primary);
  opacity: 1;
  transform: scale(0);
  transform-origin: center;
  transition: opacity 300ms, transform 300ms;
}

a:hover::after,
a:focus::after {
  transform: scale(1);
}

.sr-only {
  clip: rect(0, 0, 0, 0);
  clip-path: inset(50%);
  width: 1px;
  height: 1px;
  position: absolute;
  padding: 0;
  margin: -1px;
  overflow: hidden;
}

header,
section#about,
section#about-us {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right bottom,
    var(--cc-bg-distinct-lighter),
    var(--cc-bg-primary-lighter)
  );
}

li {
  margin: 10px 0;
}

section#events-section {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to left top,
    var(--cc-bg-distinct-lighter),
    var(--cc-bg-primary-lighter)
  );
}

section#testimonials-section {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    0.25turn,
    var(--cc-bg-distinct-lighter),
    10%,
    var(--cc-bg-primary-lighter)
  );
}

section#blog-latest {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    0.15turn,
    var(--cc-bg-primary-lighter),
    30%,
    var(--cc-bg-distinct-lighter)
  );
}

.navbar {
  font-weight: var(--cc-body-font-weight);
}

.navbar-brand:focus,
.navbar-brand:hover {
  color: var(--cc-primary);
}

.bg-primary {
  --bs-bg-opacity: 1;
  background-color: var(--cc-white-off) !important;
}

.btn-outline {
  --bs-btn-color: var(--cc-primary);
  --bs-btn-border-color: var(--cc-primary);
  --bs-btn-hover-color: var(--cc-white-sugar);
  --bs-btn-hover-bg: var(--cc-primary);
  --bs-btn-hover-border-color: var(--cc-primary);
  --bs-btn-focus-shadow-rgb: 82, 95, 225;
  --bs-btn-active-color: var(var(--cc-white-sugar));
  --bs-btn-active-bg: var(--cc-primary);
  --bs-btn-active-border-color: var(--cc-primary);
  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  --bs-btn-disabled-color: var(--cc-primary);
  --bs-btn-disabled-bg: transparent;
  --bs-btn-disabled-border-color: var(--cc-primary);
  --bs-gradient: none;
}

.btn-search {
  background-color: var(--cc-primary-bg);
}

.btn-search:hover {
  background-color: var(--cc-color-dark);
}

.btn-search svg {
  color: var(--cc-white-sugar);
}

.navbar-brand {
  color: var(--cc-primary);
  font-size: var(--cc-navbar-brand-font-size-small);
}

.nav-item:hover a {
  color: var(--cc-primary);
}

#hero {
  display: flex;
}

section#hero {
  padding-bottom: 0;
}

#hero .student,
#hero .intro {
  flex: 1;
}

#hero .shapes {
  display: none;
}

.student {
  margin-bottom: 0;
}

.student {
  max-width: 600px;
  max-height: 730px;
}

.read-more {
  display: flex;
  background-color: var(--cc-primary-bg);
  align-self: flex-start;
  border-radius: var(--bs-border-radius);
}

.read-more:hover {
  background-color: var(--cc-color-dark);
}

.read-more:hover a:hover::after,
a:focus::after {
  transform: scale(0);
}

.read-more a {
  color: var(--cc-white-sugar);
  text-decoration: none;
  font-size: 1.15rem;
  font-weight: var(--cc-body-font-weight);
}

.read-more svg {
  color: var(--cc-white-sugar);
  font-weight: var(--cc-body-font-weight);
}

#hero-lower {
  display: flex;
  justify-content: space-around;
}

h3.intro {
  color: var(--cc-primary);
  font-size: 1rem;
  font-weight: var(--cc-body-font-weight);
  text-transform: uppercase;
  letter-spacing: 0.1rem;
}

h1 {
  font-size: 68px;
  line-height: 1.24;
}

h3 {
  font-size: 24px;
}

p {
  font-size: 1.15rem;
}

p:last-of-type {
  margin-bottom: 0;
}

section {
  padding-top: 100px;
  padding-bottom: 100px;
  position: relative;
}

.student img {
  vertical-align: sub;
}

.shape-image {
  position: absolute;
  z-index: 1;
  opacity: 0.5;
}

.shape-image.shape-image-1 {
  top: 100px;
  left: -30px;
}

.shape-image.shape-image-2 {
  top: 130px;
  right: 50px;
  transform: rotate(-90deg);
}

.shape-image.shape-image-3 {
  top: 250px;
  left: 1000px;
}

.shape-image.shape-image-4 {
  top: 50px;
  left: -15px;
}

.shape-image.shape-image-5 {
  top: 230px;
  right: 250px;
  z-index: -1;
}

.shape-image.shape-image-6 {
  bottom: 60px;
  right: 250px;
  transform: rotate(-60deg);
  z-index: -1;
}

.shape-image.shape-image-7 {
  top: 150px;
  right: 100px;
}

.shape-image.shape-image-8 {
  top: 100px;
  left: -12px;
}

.shape-image.shape-image-9 {
  top: 650px;
  right: 0px;
}
/* ... */

